tests/fixtures/valid/list/list_basic.py
# Test basic list operations

# Create a simple list
x: list[int] = [1, 2, 3, 4, 5]

# Access elements by index
print(x[0])
print(x[2])
print(x[4])

# Modify element
x[1] = 10
print(x[1])

# Negative indexing
print(x[-1])
