tests/fixtures/invalid/round_float_list.py
# Cannot call round() with Float, List[int]
x = round(1.0, [1, 2, 3])
